proj1/tests/error/class_in_if.py
if True:
    class a:
        pass
